--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,13 @@
+/* REQUIREMENT: basic css */
+/* REQUIREMENT: flexbox used throughout */
 body,
 html {
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
 }
+
+/* Big hero and nav */
 
 .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/jeremy-bishop-B2Q7UC6QGLE-unsplash.jpg");
@@ -39,4 +43,69 @@ html {
     color: white;
     margin: 30px;
     text-decoration: none;
+}
+
+/* Parks */
+
+#parks-section {
+    padding: 78px;
+
+}
+
+#parks {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#parks li {
+    border: none;
+    margin: 5px;
+    list-style: none;
+    width: 200px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 10px;
+    position: relative;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    cursor: pointer;
+}
+
+#parks h3 {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    margin-top: 20px;
+    color: #003366;
+    background-color: white;
+}
+
+#parks div {
+    width: 100%;
+    text-align: center;
+}
+
+.parkscard-front {
+    background-size: cover;
+}
+
+.parkscard-back {
+    transform: rotateY(180deg);
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.parkscard-face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+
+}
+
+.parkscard.is-flipped {
+    transform: rotateY(180deg);
 }
